--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
-        <script src="scripts/themometer.js"></script>
+        <script src="scripts/themometer2.js"></script>
     </body>
 </html>
